--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
   <title>Form Validation and Ajax</title>
 
 
-<!--  <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>   -->
-
+  
+  <!--<script src="http://s.codepen.io/assets/libs/modernizr.js"></script>-->  
   
   <link rel='stylesheet prefetch' href='css/bootstrap.min.css'>
-
-
   <link rel='stylesheet prefetch' href='http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -24,23 +21,26 @@
 <fieldset>
 
 <!-- Form Name -->
-<legend>University of Kashmir | Admission Form 2017</legend>
+<legend id="out_legend">University of Kashmir | Admission Form 2017</legend>
+
 
 <!-- Text input for first Name-->
 
-<div class="form-group">
+<div class="form-group inputdata">
   <label class="col-md-4 control-label">First Name</label>  
   <div class="col-md-4 inputGroupContainer">
   <div class="input-group">
   <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
   <input  name="first_name" placeholder="First Name" class="form-control"  type="text">
     </div>
+
   </div>
 </div>
 
+
 <!-- Text input for last name-->
 
-<div class="form-group">
+<div class="form-group inputdata">
   <label class="col-md-4 control-label" >Last Name</label> 
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
@@ -50,9 +50,18 @@
   </div>
 </div>
 
+<!-- Text output for Name-->
+
+<div class="form-group outputdata" >
+  <label class="col-md-4 control-label">Name: </label>  
+  <div class="col-md-4 inputGroupContainer">
+  <input  id="out_name" class="form-control"  type="text" disabled>
+  </div>
+</div>
+
 <!-- Text input for parentage-->
 
-<div class="form-group">
+<div class="form-group inputdata">
   <label class="col-md-4 control-label" >Parentage</label> 
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
@@ -62,8 +71,17 @@
   </div>
 </div>
 
+<!-- Text output for Parentage-->
+
+<div class="form-group outputdata" >
+  <label class="col-md-4 control-label">Parentage: </label>  
+  <div class="col-md-4 inputGroupContainer">
+  <input  id="out_parentage" class="form-control"  type="text" disabled>
+  </div>
+</div>
+
 <!-- Text input for email-->
-       <div class="form-group">
+       <div class="form-group inputdata">
   <label class="col-md-4 control-label">Email ID</label>  
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
@@ -73,10 +91,19 @@
   </div>
 </div>
 
+<!-- Text output for Email-->
+
+<div class="form-group outputdata" >
+  <label class="col-md-4 control-label">Email Address: </label>  
+  <div class="col-md-4 inputGroupContainer">
+  <input  id="out_email" class="form-control"  type="text" disabled>
+  </div>
+</div>
+
 
 <!-- Text input for contact number-->
        
-<div class="form-group">
+<div class="form-group inputdata">
   <label class="col-md-4 control-label">Contact Number</label>  
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
@@ -86,14 +113,23 @@
   </div>
 </div>
 
+<!-- Text output for Contact Number-->
+
+<div class="form-group outputdata" >
+  <label class="col-md-4 control-label">Contact Number: </label>  
+  <div class="col-md-4 inputGroupContainer">
+  <input  id="out_contact" class="form-control"  type="text" disabled>
+  </div>
+</div>
+
 
 <!-- radio checks -->
- <div class="form-group">
+ <div class="form-group inputdata">
                         <label class="col-md-4 control-label">Gender:</label>
                         <div class="col-md-4">
                             <span class="radio gap">
                                 <label>
-                                    <input type="radio" name="gender" value="male" checked/> Male
+                                    <input type="radio" name="gender" value="Male" checked/> Male
                                 </label>
                             </span>
                             <span class="radio gap">
@@ -101,15 +137,25 @@
 
                             <span class="radio gap">
                                 <label>
-                                    <input type="radio" name="gender" value="female" /> Female
+                                    <input type="radio" name="gender" value="Female" /> Female
                                 </label>
                             </span>
                         </div>
   </div>
 
+
+  <!-- Text output for Gender-->
+
+<div class="form-group outputdata" >
+  <label class="col-md-4 control-label">Gender: </label>  
+  <div class="col-md-4 inputGroupContainer">
+  <input  id="out_gender" class="form-control"  type="text" disabled>
+  </div>
+</div>
+
 <!-- Text input for address-->
       
-<div class="form-group">
+<div class="form-group inputdata">
   <label class="col-md-4 control-label">Address</label>  
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
@@ -119,9 +165,18 @@
   </div>
 </div>
 
+<!-- Text output for Address-->
+
+<div class="form-group outputdata" >
+  <label class="col-md-4 control-label">Address: </label>  
+  <div class="col-md-4 inputGroupContainer">
+  <input  id="out_address" class="form-control"  type="text" disabled>
+  </div>
+</div>
+
 <!-- Text input for city-->
  
-<div class="form-group">
+<div class="form-group inputdata">
   <label class="col-md-4 control-label">City</label>  
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
@@ -131,9 +186,18 @@
   </div>
 </div>
 
+<!-- Text output for City-->
+
+<div class="form-group outputdata" >
+  <label class="col-md-4 control-label">City: </label>  
+  <div class="col-md-4 inputGroupContainer">
+  <input  id="out_city" class="form-control"  type="text" disabled>
+  </div>
+</div>
+
 <!-- Select Basic for state-->
    
-<div class="form-group"> 
+<div class="form-group inputdata"> 
   <label class="col-md-4 control-label">State</label>
     <div class="col-md-4 selectContainer">
     <div class="input-group">
@@ -153,9 +217,19 @@
 </div>
 </div>
 
-<!-- Text input -->
 
-<div class="form-group">
+<!-- Text output for State-->
+
+<div class="form-group outputdata" >
+  <label class="col-md-4 control-label">State: </label>  
+  <div class="col-md-4 inputGroupContainer">
+  <input  id="out_state" class="form-control"  type="text" disabled>
+  </div>
+</div>
+
+<!-- Text input for Pincode -->
+
+<div class="form-group inputdata">
   <label class="col-md-4 control-label">Pin Code</label>  
     <div class="col-md-4 inputGroupContainer">
     <div class="input-group">
@@ -163,6 +237,15 @@
   <input name="zip" placeholder="Pin Code" class="form-control"  type="text">
     </div>
 </div>
+</div>
+
+<!-- Text output for Pincode-->
+
+<div class="form-group outputdata" >
+  <label class="col-md-4 control-label">Pincode: </label>  
+  <div class="col-md-4 inputGroupContainer">
+  <input  id="out_pincode" class="form-control"  type="text" disabled>
+  </div>
 </div>  
 
 
@@ -172,16 +255,17 @@
 <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
 
 <!-- Button -->
-<div class="form-group">
+<div class="form-group inputdata">
   <label class="col-md-4 control-label"></label>
   <div class="col-md-4">
-    <button type="submit" class="btn btn-warning"><span class="glyphicon glyphicon-send"></span> Send </button>
+    <button type="submit" class="btn btn-warning" id="button"><span class="glyphicon glyphicon-send"></span> Send </button>
   </div>
 </div>
 
 </fieldset>
 </form>
 </div><!-- /.container -->
+
 
 
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
